# model-service

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: feature-branches.yml  main.yml  manual-release.yml  prerelease.yaml  release-version.yml  release.yml  update-version.yaml
model/: c1_BoW_Sentiment_Model.pkl  c2_Classifier_Sentiment_Model
scripts/: generate_new_version.sh
src/: app.py  model_logic.py  test.py
