[tool.poetry]
package-mode = false

[project]
name = "model-service"
version = "0.2.1-rc.2"
description = "The model-service represents a wrapper service for the released ML model. It has a REST API to expose the model to other components."
authors = [
    {name = "Team 20"}
]
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "joblib (>=1.5.0,<2.0.0)",
    "requests (>=2.30.0,<3.0.0)",
    "lib-ml @ git+https://github.com/remla25-team20/lib-ml.git@v0.1.6-beta",
    "prometheus_client (>=0.20.0,<1.0.0)",
    "psutil (>=5.9.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
